# yew-starter-template

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  yew-component-library-2561cceea7a9bfc.js  yew-component-library-2561cceea7a9bfc_bg.wasm  yew-component-library-392ee3a848d7c3a5.js  yew-component-library-392ee3a848d7c3a5_bg.wasm  yew-component-library-68719e0f0fea21f0d26e250bdfc8c8ba44bdfc789fc2ae8ca5b204d9006047485c03f3cb57a688080a12dfb164d1a293.js  yew-component-library-68719e0f0fea21f0d26e250bdfc8c8ba44bdfc789fc2ae8ca5b204d9006047485c03f3cb57a688080a12dfb164d1a293_bg.wasm  yew-component-library-6ff4e1fa28ad1b61.js  yew-component-library-6ff4e1fa28ad1b61_bg.wasm  yew-component-library-8f4dc3a6f12b0fb7.js  yew-component-library-8f4dc3a6f12b0fb7_bg.wasm  yew-component-library-f7903ed2565fd531.js
.github/workflows/: continuous_integration.yml
src/: main.rs
src/components/: mod.rs  some_component.rs
src/routers/: main_router.rs
src/views/: another_view.rs  main_view.rs  mod.rs
